--- a/wines.css
+++ b/wines.css
@@ -1,328 +1,176 @@
 body {
-    font-family: 'Agbalumo', 'MedievalSharp', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-image: url('inside3.webp');
-    color: white;
+  margin: 0;
+  padding: 0;
+  background: url('inside3.webp') no-repeat center center fixed;
+  background-size: cover;
+  font-family: 'Arial', sans-serif;
+  color: white;
+  text-align: center;
 }
 
-#logo {
-    float: left;
-    font-size: 200%;
-    margin-left: 90px;
-    margin-top: -1px;
-    color: white;
-    width: 150px;
-    height: auto;
-    letter-spacing: 20px;
-    font-weight: bold;
-     font-size: 18px;
-     color: white; 
-     padding: 15px; 
-     text-shadow: 10 10 10px rgba(255, 255, 255, 0.7); 
-     transform: scale(1) rotate(0deg); 
-     transition: transform 0.5s ease, box-shadow 0.5s ease, border 0.5s ease, text-shadow 0.5s ease, font-size 0.5s ease; 
-   }
-   
-   
-   /* navigation links */
-   
-   #menu {
-    font-size: 100%;
-    letter-spacing: 0px;
-    font-size: 12px;
-    font-weight: bold;
-   }
-   
-   #menu, #logo {
-    line-height: 75px;
-   }
-   
-   #menu li {
+/* navabar aniamtion */
+
+{
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: grey;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
     float: right;
-    list-style-type: none;
-    margin-right: 30px;
-   }
-   
-   #menu a {
-    text-decoration: none;
-    color: inherit;
-   }
-   
-   
-   /* button animations header */
-   
-    .dropdown {
-               position: relative;
-               display: inline-block;
-           }
-   
-           .wine-tasting-link {
-               text-decoration: none;
-           }
-   
-           .dropbtn {
-               background-color: transparent;
-               color: white;
-               padding: 8px 15px;
-               margin: 5px;
-               font-size: 16px;
-               border: 1px solid white;
-               cursor: pointer;
-               border-radius: 5px;
-               transition: background-color 0.3s ease, color 0.3s ease;
-               outline: none;
-           }
-   
-           .dropbtn:hover {
-               background-color: #1a1a1a;
-               color: #fff;
-           }
-   
-   
-   .dropbtn {
-     color: white;
-     padding: 16px;
-     font-size: 160px;
-     border: none;
-     font-size: medium;
-   }
-   
-   .dropdown {
-     color: white;
-     position: relative;
-     display: inline-block;
-   }
-   
-   .dropdown-content {
-     display: none;
-     position: absolute;
-     background-color: initial;
-     min-width: 160px;
-     box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.2);
-     z-index: 1;
-   }
-   
-   .dropdown-content a {
-     color: white;
-     padding: 12px 16px;
-     text-decoration: double;
-     display: block;
-     font-size: 12px;
-     font-weight: bold;
-     padding: 50px; 
-     text-shadow: 10 10 10px white; 
-     
-   }
-   
-   
-   .dropdown-content a:hover {background-color: black ;}
-   
-   .dropdown:hover .dropdown-content {display: block;}
-   
-   .dropdown:hover .dropbtn {background-color: transparent;}
-   
-   
-   .dropdown {
-     position: relative;
-     display: inline-block;
-     
-   }
-   
-   .dropbtn {
-     font-size: 15px;
-     justify-content: center;
-     text-align: center;
-   }
-   
-   .dropdown-content {
-     display: none;
-     position: absolute;
-     text-align: center; 
-   }
-   
-   .dropdown-content a {
-     display: block;
-     padding: 10px;
-     text-decoration: none;
-     opacity: 0; 
-     animation: fadeIn 1s ease-in-out forwards; 
-     border-bottom: 2px solid black; 
-     transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
-   }
-   
-   .dropdown-content a:last-child {
-     border-bottom: none;
-   }
-   
-   
-   .dropdown:hover .dropdown-content {
-     display: block;
-   }
-   
-   .dropbtn i {
-     margin-right: 5px;
-   }
-   
-   @keyframes fadeIn {
-     from {
-         opacity: 0;
-         transform: translateY(-10px);
-     }
-     to {
-         opacity: 1;
-         transform: translateY(10);
-     }
-   }
-   
-
-.photo-gallery {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-    justify-content: center; 
-    margin-top: 3px;
-    width: 55cm;
-    height: 12cm;
+    display: block;
+  }
 }
 
-nav {
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+
+header {
+  padding: 50px 20px;
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
+h1 {
+  margin: 0;
+  font-size: 3em;
+  letter-spacing: 2px;
+  animation: fadeInUp 1s ease-in-out;
+}
+
+h2 {
+  margin: 0;
+  font-size: 2em;
+  letter-spacing: 2px;
+  animation: fadeInUp 1s ease-in-out;
+  justify-content: center;
+}
+
+@keyframes fadeInUp {
+  from {
+      transform: translateY(50px);
+      opacity: 0;
+  }
+  to {
+      transform: translateY(0);
+      opacity: 1;
+  }
+}
+
+p {
+  margin: 20px 0;
+  font-size: 1.2em;
+  letter-spacing: 1px;
+  animation: fadeIn 1s ease-in-out;
+}
+
+main {
+  padding: 20px;
+}
+
+section {
+  background: rgba(0, 0, 0, 0.7);
+  border-radius: 10px;
+  margin: 20px auto;
+  padding: 20px;
+  animation: fadeIn 1s ease-in-out;
+}
+
+h2, h3 {
   margin-bottom: 20px;
 }
 
-.gallery-item {
-    position: relative;
-    width: 10cm;
-    height: 10cm;
-    perspective: 1000px;
-    margin-top: 10cm;
-    align-items: center;
-    align-self: center;
-     
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.gallery-item-inner {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-    transition: transform 1.6s ease-out;
+li {
+  margin-bottom: 10px;
 }
 
-.gallery-item-inner .front,
-.gallery-item-inner .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+.tooltip {
+  font-style: italic;
+  color: #ccc;
 }
 
-.gallery-item:hover .gallery-item-inner {
-    transform: rotateY(180deg);
+.reservation-btn {
+  display: inline-block;
+  padding: 15px 30px;
+  margin-top: 30px;
+  font-size: 1.2em;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  background-color: #d3d3d3; /* Light grey */
+  border-radius: 5px;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+  animation: pulse 2s infinite;
 }
 
-.gallery-item img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px 15px 15px 15px;
-    transition: transform 3s ease-out;
-}
-
-.gallery-item:hover img {
-    transform: scale(1.1);
-}
-
-.photo-caption {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    color: white;
-    border-radius: 10px 10px 10px 10px;
-    background-color: transparent;
-    justify-self: center;
-    text-align: center;
-    backface-visibility: hidden;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-style: italic;
-}
-
-.back {
-    transform: rotateY(180deg);
-    background-color: white;
-    color: black; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    text-align: center;
-    flex-direction: column; 
-}
-
-
-.front, .back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-
-    p {
-        padding: 20px;
-        margin-bottom: 20px;
-        color: white; 
-    }
-
-    strong {
-        color: white;
-        margin-bottom: 10px;
-    }
-}
-
-/* reservation animation */
-
-.reservation-button {
-    margin-top: 20px; 
-    padding: 15px 30px;
-    font-size: 18px;
-    background-color: #1a1a1a;
-    color: white;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    display: inline-block;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.reservation-button:hover {
-    background-color: #af1c1c;
-    transform: scale(1.2);
-}
-
-button {
-    background-color: black;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    animation: fadeIn 1s ease-in-out;
-    transition: background-color 0.3s ease, transform 0.3s ease; 
+@keyframes pulse {
+  0% {
+      transform: scale(1);
   }
-  
-  button:hover {
-    background-color: red;
-    transform: scale(1.25); 
+  10% {
+      transform: scale(1.01);
   }
-  
-  @keyframes fadeIn {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  20% {
+      transform: scale(1);
   }
+}
+
+.reservation-btn:hover {
+  background-color: #ff0000;
+  color: black;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+}
