--- a/12degu.css
+++ b/12degu.css
@@ -1,185 +1,71 @@
 body {
     font-family: 'Helvetica', sans-serif;
     background-image: url(inside3.webp);
-    margin: 105px auto 0;
+    margin: auto 0;
     padding: 0;
     z-index:;
 }
 
    
-  /* navigation links */
+ /* navabar aniamtion */
 
-#menu {
-    font-size: 100%;
-    letter-spacing: 0px;
-    font-size: 12px;
-    font-weight: bold;
-   }
-   
-   #menu, #logo {
-    line-height: 75px;
-   }
-   
-   #menu li {
+{
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: grey;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
     float: right;
-    list-style-type: none;
-    margin-right: 30px;
-   }
-   
-   #menu a {
-    text-decoration: none;
-    color: inherit;
-   }
-   
-   
-   /* button animations header */
-   
-    .dropdown {
-               position: relative;
-               display: inline-block;
-           }
-   
-           .wine-tasting-link {
-               text-decoration: none;
-           }
-   
-           .dropbtn {
-               background-color: transparent;
-               color: white;
-               padding: 8px 15px;
-               margin: 5px;
-               font-size: 16px;
-               border: 1px solid white;
-               cursor: pointer;
-               border-radius: 5px;
-               transition: background-color 0.3s ease, color 0.3s ease;
-               outline: none;
-           }
-   
-           .dropbtn:hover {
-               background-color: #1a1a1a;
-               color: #fff;
-           }
-   
-   
-   .dropbtn {
-     color: white;
-     padding: 16px;
-     font-size: 160px;
-     border: none;
-     font-size: medium;
-   }
-   
-   .dropdown {
-     color: white;
-     position: relative;
-     display: inline-block;
-   }
-   
-   .dropdown-content {
-     display: none;
-     position: absolute;
-     background-color: initial;
-     min-width: 160px;
-     box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.2);
-     z-index: 1;
-   }
-   
-   .dropdown-content a {
-     color: white;
-     padding: 12px 16px;
-     text-decoration: double;
-     display: block;
-     font-size: 12px;
-     font-weight: bold;
-     padding: 50px; 
-     text-shadow: 10 10 10px white; 
-     
-   }
-   
-   
-   .dropdown-content a:hover {background-color: black ;}
-   
-   .dropdown:hover .dropdown-content {display: block;}
-   
-   .dropdown:hover .dropbtn {background-color: transparent;}
-   
-   
-   .dropdown {
-     position: relative;
-     display: inline-block;
-     
-   }
-   
-   .dropbtn {
-     font-size: 15px;
-     justify-content: center;
-     text-align: center;
-   }
-   
-   .dropdown-content {
-     display: none;
-     position: absolute;
-     text-align: center; 
-   }
-   
-   .dropdown-content a {
-     display: block;
-     padding: 10px;
-     text-decoration: none;
-     opacity: 0; 
-     animation: fadeIn 1s ease-in-out forwards; 
-     border-bottom: 2px solid black; 
-     transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
-   }
-   
-   .dropdown-content a:last-child {
-     border-bottom: none;
-   }
-   
-   
-   .dropdown:hover .dropdown-content {
-     display: block;
-   }
-   
-   .dropbtn i {
-     margin-right: 5px;
-   }
-   
-   @keyframes fadeIn {
-     from {
-         opacity: 0;
-         transform: translateY(-10px);
-     }
-     to {
-         opacity: 1;
-         transform: translateY(10);
-     }
-   }
-   
+    display: block;
+  }
+}
 
-
-#logo {
-    float: left;
-    font-size: 200%;
-    margin-left: 90px;
-    margin-top: 17px;
-    color: white;
-    width: 150px;
-    height: auto;
-    letter-spacing: 20px;
-    font-weight: bold;
-     font-size: 18px;
-     color: white; 
-     padding: 15px; 
-     text-shadow: 10 10 10px rgba(255, 255, 255, 0.7); 
-     transform: scale(1) rotate(0deg); 
-     transition: transform 0.5s ease, box-shadow 0.5s ease, border 0.5s ease, text-shadow 0.5s ease, font-size 0.5s ease; 
-    }
-
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 
 header {
-    padding: 50px 20px;
+    
     animation: fadeIn 1s ease-in-out;
 }
 
