Organize project files into directories

--- a/assets/css/champagne.css
+++ b/assets/css/champagne.css
@@ -1,13 +1,12 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('../images/inside3.webp') no-repeat center center fixed;
+    background: url(../images/inside3.webp) no-repeat center center fixed;
     background-size: cover;
     font-family: 'Arial', sans-serif;
     color: white;
     text-align: center;
 }
-
 
 
 body {
