--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -6,6 +6,7 @@ body {
 .topnav {
   overflow: hidden;
 }
+
 .topnav a {
   float: left;
   display: block;
@@ -52,15 +53,12 @@ body {
   }
 }
 
-
-
    body {
-    background-image: url('../images/inside3.webp'); 
+    background-image: url(../images/inside3.webp); 
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     color: white; 
-    
     text-align: center; 
 }
 
@@ -72,12 +70,12 @@ video {
     display: block; 
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 500px 500px 500px rgba(0, 0, 0, 0.5); 
+    box-shadow: 500 500 500px rgba(0, 0, 0, 0.5); 
 }
 
 #beginning {
     border-radius: 10px;
-    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 20 20 20px rgba(0, 0, 0, 0.5);
     
 }
 
