--- a/assets/css/hospitality.css
+++ b/assets/css/hospitality.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -53,15 +54,12 @@ body {
   }
 }
 
-
-
    body {
-    background-image: url('../images/inside3.webp'); 
+    background-image: url(../images/inside3.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     color: white; 
-    
     text-align: center; 
 }
 
@@ -73,16 +71,17 @@ video {
     display: block; 
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 500px 500px 500px rgba(0, 0, 0, 0.5); 
+    box-shadow: 500 500 500px rgba(0, 0, 0, 0.5); 
 }
 
 #beginning {
     border-radius: 10px;
-    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 20 20 20px rgba(0, 0, 0, 0.5);
 }
 
 h2, p {
     text-shadow: 10px 10px 30px rgba(0, 0, 0, 0.7); 
 }
+
 
 
