--- a/assets/css/profession.css
+++ b/assets/css/profession.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url(../images/inside3.webp); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  text-align: center; 
 }
 
 .topnav {
@@ -54,17 +59,6 @@ body {
 }
 
 
-
-
-   body {
-    background-image: url('../images/inside3.webp'); 
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  
-    text-align: center; 
-}
-
 video {
     max-width: 25cm; 
     height: 15cm; 
@@ -73,12 +67,12 @@ video {
     display: block; 
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 500px 500px 500px rgba(0, 0, 0, 0.5); 
+    box-shadow: 500 500 500px rgba(0, 0, 0, 0.5); 
 }
 
 #beginning {
     border-radius: 10px;
-    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 20 20 20px rgba(0, 0, 0, 0.5);
 }
 
 h2, p {
