--- a/assets/css/wines.css
+++ b/assets/css/wines.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  background: url('../images/inside3.webp') no-repeat center center fixed;
+  background: url(../images/inside3.webp) no-repeat center center fixed;
   background-size: cover;
   font-family: 'Arial', sans-serif;
   color: white;
   text-align: center;
 }
+
 
 body {
   margin: 0;
@@ -62,7 +63,6 @@ body {
     text-align: left;
   }
 }
-
 
 header {
   padding: 50px 20px;
@@ -149,7 +149,7 @@ li {
   font-weight: bold;
   text-decoration: none;
   color: white;
-  background-color: #d3d3d3;
+  background-color: #d3d3d3; 
   border-radius: 5px;
   transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
   animation: pulse 2s infinite;
